--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,24 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
-        </dependency>      
+        </dependency>
+        
+        <!-- Ajax & Jackson -->
+        <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-mapper-asl</artifactId>
+	        <version>1.9.13</version>
+		</dependency>
+		<dependency>
+		        <groupId>org.codehaus.jackson</groupId>
+		        <artifactId>jackson-core-asl</artifactId>
+		        <version>1.9.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.10.0</version>
+		</dependency>      
 	</dependencies>
     <build>
         <plugins>
