--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 			<version>1.2</version>
 		</dependency>
 	
-			<!-- spring-jdbc -->
+		<!-- spring-jdbc -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -147,7 +147,7 @@
             <version>1.16</version>
         </dependency>
   
-  	<!-- org.mybatis/mybatis -->
+  		<!-- org.mybatis/mybatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
@@ -176,6 +176,23 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.10.0</version>
+		</dependency>
+		
+		<!-- spring-security -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		    <version>5.0.8.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		    <version>5.0.8.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		    <version>5.0.8.RELEASE</version>
 		</dependency>      
 	</dependencies>
     <build>
