--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,20 @@
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-config</artifactId>
 		    <version>5.0.8.RELEASE</version>
-		</dependency>      
+		</dependency>
+		<!-- 첨부파일 -->
+		<!-- MultipartHttpServletRequset -->
+		 <dependency>
+			 <groupId>commons-io</groupId>
+			 <artifactId>commons-io</artifactId>
+			 <version>2.0.1</version>
+		 </dependency>
+		 
+		 <dependency>
+			 <groupId>commons-fileupload</groupId>
+			 <artifactId>commons-fileupload</artifactId>
+			 <version>1.2.2</version>
+		 </dependency>      
 	</dependencies>
     <build>
         <plugins>
