--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,15 @@
 			 <groupId>commons-fileupload</groupId>
 			 <artifactId>commons-fileupload</artifactId>
 			 <version>1.2.2</version>
-		 </dependency>      
+		 </dependency>   
+		 
+		 <!-- 트랜젝션 START -->
+	 	 <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+	 	 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-tx</artifactId>
+		     <version>3.1.1.RELEASE</version>
+		 </dependency>   
 	</dependencies>
     <build>
         <plugins>
