--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,13 @@
 		     <groupId>org.springframework</groupId>
 		     <artifactId>spring-tx</artifactId>
 		     <version>3.1.1.RELEASE</version>
-		 </dependency>   
+		 </dependency>
+		 
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+		</dependency>   
 	</dependencies>
     <build>
         <plugins>
